<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="336dp"
        android:layout_height="531dp"
        android:alpha="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="531dp"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="153dp"
            android:layout_height="69dp"
            app:srcCompat="@drawable/icon2" />

        <EditText
            android:id="@+id/email"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/usuario"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/login_username_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/mangafav"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/login_mangafav_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/onepice_orange"
            android:padding="15dp"
            android:text="@string/login_btn2"
            android:textColor="@color/darkbox"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/link_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/login_btn1"
            android:textColor="#F28E13"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/link_recoverp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:includeFontPadding="false"
            android:text="@string/password_recov"
            android:textColor="@color/onepice_orange"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>