<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/onepice_orange"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/manga_profile_bgimg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="364dp"
        android:layout_height="649dp"
        android:alpha="0.7"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365"
        app:srcCompat="@drawable/rectangle" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6">

        <TextView
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="match_parent"
            android:layout_height="213dp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            app:shapeAppearanceOverlay="@style/roundedCornersImageView"
            tools:srcCompat="@tools:sample/avatars" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/btn_chooseimg"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:backgroundTint="#F2B90C"
                android:text="@string/profile_btn3"
                android:textColor="@color/darkbox" />

            <Button
                android:id="@+id/btn_uploadimg"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:backgroundTint="#F2B90C"
                android:text="@string/profile_btn4"
                android:textColor="@color/darkbox" />
        </TableRow>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:text="Email"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:text="Manga Favorito"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mangafav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_changep"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="25sp"
            android:layout_marginEnd="10sp"
            android:backgroundTint="@color/onepice_orange"
            android:text="@string/profile_btn1"
            android:textColor="@color/darkbox"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="10sp"
            android:backgroundTint="#ff3860"
            android:text="@string/profile_btn2"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>